--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -101,14 +101,13 @@
           </div>
         </div>
         <!-- LOWER PROFILE BUTTONS -->
-        <div class="grid grid-cols-4 w-full">
-          <a
-            class="deleteButton bg-slate-400 hover:bg-slate-400 flex item-center justify-center col-span-2"
-            id="followButton"
-            href="#"
-            >
-            Follow
-          </a>
+        <!-- <form th:action="@{/follow}" method="post">
+          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+          <input type="hidden" name="followedId" th:value="${userProfile?.id}" />
+          <input type="hidden" name="followerId" th:value="${user?.id}" />
+          <button type="submit">Follow</button>
+        </form> -->
+          
           <a
             class="deleteButton bg-slate-400 hover:bg-slate-400 flex item-center justify-center col-span-2"
             id="messageButton"
