--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -100,13 +100,12 @@
             ></p>
           </div>
         </div>
-        <!-- LOWER PROFILE BUTTONS -->
-        <!-- <form th:action="@{/follow}" method="post">
-          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-          <input type="hidden" name="followedId" th:value="${userProfile?.id}" />
-          <input type="hidden" name="followerId" th:value="${user?.id}" />
-          <button type="submit">Follow</button>
-        </form> -->
+
+        <div>
+          <form th:action="@{/follow/{id}(id=${userProfile?.id})}" method="post">
+            <button type="submit">Follow</button>
+        </form>
+        </div>
           
           <a
             class="deleteButton bg-slate-400 hover:bg-slate-400 flex item-center justify-center col-span-2"
