--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,6 +47,11 @@
     </header>
 
     <div class="overflow-auto w-full bg-slate-200">
+      <div th:if="${collections.size == 0}">
+        <div class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm">
+          <span class="text-sm font-semibold">No collections yet</span>
+        </div>
+      </div>
       <div th:if="${collections != null}">
         <div class="flex flex-col items-center justify-center w-full bg-white">
           <!-- COLLECTION CONTAINER -->
