--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -706,15 +706,21 @@
           <ul class="flex justify-between items-center w-full">
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a class="text-2xl font-bold" href="/index">&#8962;</a>
+                <a class="text-2xl font-bold" href="/index">
+                  &#8962;
+                </a>
               </div>
             </li>
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
-                <a
-                  class="text-2xl font-bold"
-                  th:href="@{/create-item/{collectionId}(collectionId=${collection.id})}"
-                >
+                <a class="text-2xl font-bold" href="/popular">
+                  &#10066;
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/create-collection">
                   &#43;
                 </a>
               </div>
