--- a/src/main/resources/templates/followingList.html
+++ b/src/main/resources/templates/followingList.html
@@ -62,7 +62,18 @@
               </div>
             </li>
             <li>
-
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/popular">
+                  &#10066;
+                </a>
+              </div>
+            </li>
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/create-collection">
+                  &#43;
+                </a>
+              </div>
             </li>
             <li>
               <a href="/profile">
