--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
     </header>
 
     <div class="overflow-auto w-full bg-slate-200">
-      <div th:if="${collections.size == 0}">
+      <div th:if="${collections == null}">
         <div class="flex justify-center items-center w-full h-12 bg-slate-100 shadow-sm">
           <span class="text-sm font-semibold">No collections yet</span>
         </div>
@@ -422,6 +422,13 @@
             <li>
               <div class="h-4 w-4 flex items-center justify-center">
                 <a class="text-2xl font-bold" href="/index">&#8962;</a>
+              </div>
+            </li>
+            <li>
+              <div class="h-4 w-4 flex items-center justify-center">
+                <a class="text-2xl font-bold" href="/popular">
+                  &#10066;
+                </a>
               </div>
             </li>
             <li>
