small fix for previous push

--- a/src/main/resources/templates/popular.html
+++ b/src/main/resources/templates/popular.html
@@ -133,7 +133,7 @@
       </script>
 
 
-      <div class="h-auto w-full border-b-2 border-slate-300 bg-slate-200 shadow-sm">
+      <div class="h-auto w-full bg-slate-100">
         <div class="w-full min-h-fit overflow-y-auto">
           <div class="grid">
             <div th:each="row : ${partitionedCollections}" class="grid grid-cols-3 border-0">
