like items functionality fully fleshed out and working

--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -113,7 +113,7 @@
                 class="truncate-multiline leading-[1rem]"
                 onclick="toggleTruncate(this)"
               >
-                <a href="/profile">
+              <a th:href="@{/profile/{id}(id=${userProfile?.id})}">
                   <span
                     class="font-semibold"
                     th:if="${userProfile?.username != null}"
