--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -127,12 +127,31 @@
           <div class="w-full px-2 bg-white">
             <div class="flex flex-row w-full h-auto py-1 text-sm">
               <ul class="flex flex-row justify-start items-center pr-2">
+
+
+
                 <li class="flex flex-row justify-start items-center pr-2">
-                  <a>
-                    <span class="pr-2 font-medium">&#9825;</span>
-                  </a>
-                  <p class="font-thin">0</p>
+                  <div class="flex justify-start items-center">
+                    <form th:if="${item?.id != null}" th:action="@{/items/{id}/like(id=${item?.id})}" method="post">
+                      <input type="hidden" name="itemId" th:value="${item.id}" />
+                      <input type="hidden" name="userId" th:value="${user.id}" />
+                      <input type="hidden" name="liked" th:value="${item.isLiked}" />
+                      <button type="submit" class="likeButton" th:if="${item.userId != user.id}">
+                        <span class="pr-2 font-medium" th:if="${isLiked}">&#9829;</span>
+                        <span class="pr-2 font-medium" th:if="${!isLiked}">&#9825;</span>
+                      </button>
+                      <button type="button" class="likeButton" th:if="${item.userId == user.id}" disabled>
+                        <span class="pr-2 font-medium">&#9829;</span>
+                      </button>
+                    </form>
+                  </div>
+                  <div class="flex justify-start items-center">
+                    <p class="font-thin" th:text="${likeCount}"></p>
+                  </div>
                 </li>
+
+
+
                 <li class="flex flex-row justify-start items-center pr-2">
                   <a id="commentToggle" class="pr-2 font-medium cursor-pointer">
                     comment
