--- a/src/main/resources/templates/item.html
+++ b/src/main/resources/templates/item.html
@@ -37,7 +37,7 @@
       </nav>
     </header>
 
-    <div class="profileContainerScroll overflow-hidden bg-slate-200">
+    <div th:id="'item-' + ${item.id}" class="profileContainerScroll overflow-hidden bg-slate-200">
       <div class="h-auto w-full bg-white">
         <div class="collectionNavbar shadow-sm">
           <div class="flex justify-between items-center w-full">
