--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -143,7 +143,7 @@
             </div>
 
             <!-- COLLECTION CAPTION -->
-            <div class="collectionCaption w-full px-2">
+            <div class="collectionCaption w-full px-2 shadow-sm border-2 border-slate-100">
               <div class="flex flex-row justify-between items-center">
                 <div class="flex flex-row w-full h-auto py-1 text-sm">
                   <ul class="flex flex-row justify-start items-center pr-2">
@@ -238,7 +238,7 @@
 
             <!-- COLLECTION COMMENT BOX -->
             <div
-              class="collectionCommentBox hidden"
+              class="collectionCommentBox hidden mt-2"
               th:attr="data-collection-id=${collection.id}"
             >
               <!-- Comment Template -->
